--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "jest-environment-jsdom": "^29.7.0",
     "next": "^14.1.0",
+    "papaparse": "^5.4.1",
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
